--- a/Finding_geese_orientations.ipynb
+++ b/Finding_geese_orientations.ipynb
@@ -14,7 +14,7 @@
     "<pre>\n",
     "&lt;jonty&gt; geese geese geese\n",
     "</pre>\n",
-    "![Geese](https://usercontent.irccloud-cdn.com/file/17wfCIwj/DJI_0496.JPG)\n",
+    "![Geese](https://raw.githubusercontent.com/wiseman/geese-orientation/refs/heads/main/geese-original.jpg)\n",
     "<pre>\n",
     "&lt;Aaron Mathews&gt; look at all those chickens\n",
     "&lt;wiseman&gt; I kinda want to see an orientation histogram for those ducks\n",
@@ -25,7 +25,7 @@
     "\n",
     "If you zoom in you can see enough detail to determine the geese orientations:\n",
     "\n",
-    "![](https://i.imgur.com/uuv1uiT.png)\n",
+    "![Geese cropped](https://raw.githubusercontent.com/wiseman/geese-orientation/refs/heads/main/geese-original-cropped.png)\n",
     "\n",
     "So now we just need code to automate it.\n",
     "\n",
@@ -66,15 +66,9 @@
     "import math\n",
     "\n",
     "import cv2 as cv2\n",
-    "\n",
-    "# from google.colab.patches import cv2_imshow\n",
     "import matplotlib.pylab as plt\n",
     "import numpy as np\n",
-    "\n",
-    "# import pandas as pd\n",
-    "from skimage import io\n",
-    "\n",
-    "# from PIL import Image"
+    "from skimage import io"
    ]
   },
   {
